Fix collector visibility in Scheduler, compact theme (T727887) (#7967)

--- a/styles/widgets/generic/scheduler.generic.less
+++ b/styles/widgets/generic/scheduler.generic.less
@@ -25,6 +25,8 @@
 
     @SCHEDULER_RECURRENCE_EDITOR_ITEM_OFFSET: -88px;
     @SCHEDULER_RECURRENCE_REPEAT_LABEL_OFFSET: 5px;
+
+    @GENERIC_SCHEDULER_APPOINTMENT_COLLECTOR_HEIGHT: 20px;
 }
 
 .dx-size-compact() {
@@ -54,6 +56,8 @@
 
     @SCHEDULER_RECURRENCE_EDITOR_ITEM_OFFSET: -80px;
     @SCHEDULER_RECURRENCE_REPEAT_LABEL_OFFSET: 3px;
+
+     @GENERIC_SCHEDULER_APPOINTMENT_COLLECTOR_HEIGHT: 17px;
 }
 
 @GENERIC_SCHEDULER_APPOINTMENT_REDUCED_CONTENT_PADDING: 40px;
@@ -464,6 +468,27 @@
                 border-left: none;
             }
         }
+    }
+}
+
+.dx-scheduler-appointment-collector {
+    height: @GENERIC_SCHEDULER_APPOINTMENT_COLLECTOR_HEIGHT;
+
+    .dx-scheduler-appointment-collector-content {
+        span:last-child {
+            line-height: @GENERIC_SCHEDULER_APPOINTMENT_COLLECTOR_HEIGHT / 1.5;
+            height: @GENERIC_SCHEDULER_APPOINTMENT_COLLECTOR_HEIGHT;
+        }
+    }
+
+    &.dx-state-hover {
+        &:before {
+            border-radius: @GENERIC_SCHEDULER_APPOINTMENT_COLLECTOR_HEIGHT;
+        }
+    }
+
+    &.dx-button.dx-button-default {
+        border-radius: @GENERIC_SCHEDULER_APPOINTMENT_COLLECTOR_HEIGHT;
     }
 }
 
